--- a/styles.styl
+++ b/styles.styl
@@ -10,6 +10,7 @@ normalize-css()
 
 html
     box-sizing: border-box
+    background-color: material.blue
 
 *, *:before, *:after
     box-sizing: inherit
