--- a/client/stylesheets/styles.styl
+++ b/client/stylesheets/styles.styl
@@ -10,7 +10,7 @@ normalize-css()
 
 html
     box-sizing: border-box
-    background-color: material.blue
+    background-color: material.red
 
 *, *:before, *:after
     box-sizing: inherit
